# chatroom-syncer

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  README.md  config-example.yaml  docker-compose.dev.yaml  docker-compose.yaml  env-example  pyproject.toml
.github/workflows/: build_docker.yaml  ci.yaml  release.yaml
src/: chatroom_syncerpatch.pth
src/chatroom_syncer/: __main__.py  _patch.py  emoji.py  room_syncer.py  utils.py
src/chatroom_syncer/plugins/: __init__.py  github_discussion_sink.py  github_sink.py  slack_sink.py
tests/plugins/: test_github_discussion_sink.py
wechaty-gateway/: Dockerfile  README.md  package-lock.json  package.json
